--- a/app/globals.css
+++ b/app/globals.css
@@ -6,10 +6,10 @@
 }
 
 @theme inline {
-  --color-background: var(--background);
+  --color-background: linear-gradient(to bottom right,#fce7f3,#fef9c3,#bfdbfe);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: sans-serif;
+  --font-mono: monospace;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -20,7 +20,7 @@
 }
 
 body {
-  background: var(--background);
+  background: linear-gradient(to bottom right,#fce7f3,#fef9c3,#bfdbfe);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
